# vi-music

./: README.md  package-lock.json  package.json
src/: app.js  commands.js  devices.js  features.js  filter.js  index.html  keybindings.js  keyboard.js  library.js  navigation.js  playback.js  playlists.js  queue.js  settings.js  state.js  styles.css  tauri.js  ui.js  utils.js  visual.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/views/: artist.js  folder.js  playlist.js
