[package]
name = "vi-music"
version = "1.0.0"
description = "A VIM-style music player"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["dialog-open", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rodio = { version = "0.19", features = ["symphonia-all"] }
symphonia = { version = "0.5", features = ["flac"] }
mp3-duration = "0.1"
walkdir = "2.4"
dirs = "5.0"
souvlaki = "0.7"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
